# MCLCE-iOS

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  INSTALL.md  README.md  ROADMAP.md  STATUS.md
.github/workflows/: auto-probe.yml  ios.yml  probes.yml  shader-probe.yml  world-probe.yml
Minecraft.Client/iOS/: iOS_Threading.cpp  iOS_Threading.h  iOS_WinCompat.h  iOS_WinFileShim.h  iOS_app_stub.h  iOS_stdafx.h
Minecraft.Client/iOS/4JLibs/inc/: 4J_Input.h  4J_Profile.h  4J_Render.h  4J_Storage.h
Minecraft.Client/iOS/App/: AppDelegate.h  AppDelegate.mm  CMakeLists.txt  GameBootstrap.cpp  MCLE_iOS_Audio.h  MCLE_iOS_Audio.mm  MCLE_iOS_Settings.h  MCLE_iOS_Settings.mm  MetalView.h  MetalView.mm  MinecraftViewController.h  MinecraftViewController.mm
Minecraft.Client/iOS/Game/: CMakeLists.txt  MCLEGameLoop.cpp  MCLE_iOS_MachHandler.cpp
Minecraft.Client/iOS/GameswfProbe/: CMakeLists.txt  probe_stub.cpp
Minecraft.Client/iOS/Iggy/: iggy.h
Minecraft.Client/iOS/Input/: CMakeLists.txt  INP_iOS_Bridge.cpp  INP_iOS_Bridge.h  INP_iOS_Controller.mm
Minecraft.Client/iOS/Render/: CMakeLists.txt  MetalContext.h  MetalContext.mm  RND_iOS_Metal.mm  RND_iOS_Stub.cpp  RND_iOS_Stub.h  buffered_image_load.cpp  png_decode.mm
Minecraft.Client/iOS/Resources/: Info.plist.in  LaunchScreen.storyboard  test_rect.swf
Minecraft.Client/iOS/Sentient/: SentientTelemetryCommon.h
Minecraft.Client/iOS/Storage/: CMakeLists.txt  STO_iOS_Paths.h  STO_iOS_Paths.mm  STO_iOS_SaveGame.mm
Minecraft.Client/iOS/UI/: CMakeLists.txt  Iggy_Shim.cpp  gameswf_ios_config.h  mcle_swf_bridge.h  mcle_swf_bridge.mm  render_handler_metal.h  render_handler_metal.mm
Minecraft.Client/iOS/WorldProbe/: CMakeLists.txt  link_stubs.cpp  probe_link_test.cpp  probe_stub.cpp
Minecraft.Client/iOS/compat_headers/: sal.h  stdafx.h  xhash
cmake/: IntegrateRuffle.cmake  ios.toolchain.cmake
scripts/: _overnight_notes.md  _overnight_notes_g5.md  _overnight_notes_textures.md  _probe_symbolclass.py  _session_6ecf_summary.txt  auto-probe.sh  dump-po3.py  dump-swf-tags.py  fetch-latest-ipa.ps1  gen-test-swf.py  iggy-to-swf.sh  list-arc.py  patch-addentity-checkpoints.py  patch-biomesource-getrawbiomeblock-checkpoints.py  patch-bufferedimage-ctor-ckpts.py  patch-chunk-rebuild-checkpoints.py  patch-chunk-rebuild-ckpts.py  patch-chunk-rebuild-tile-nullguard.py  patch-chunk-tile-entity-render-null.py  patch-colourtable-ckpts.py  patch-colourtable-public.py  patch-compressedtilestorage-getdata-checkpoints.py  patch-csfo-close-checkpoints.py  patch-entity-ctor-checkpoints.py  patch-entitytracker-debugbreak.py  patch-fileheader-write.py  patch-gameswf.sh  patch-getskycolor-checkpoints.py  patch-gettexture-ckpts.py  patch-grass-color-ckpts.py  patch-grasside-overlay-log.py  patch-gui-render-hud.py  patch-gui-screensection.py  patch-item-staticctor-checkpoints.py  patch-leak-counters.py  patch-level-init-checkpoints.py  patch-levelchunk-getblockdata-checkpoints.py  patch-leveldata-checkpoints.py  patch-levelrenderer-checkpoints.py  patch-levelrenderer-clamp-playerindex.py  (+44 more)
scripts/_mainmenu_as/: FJ_Base.as  FJ_ButtonList.as  FJ_Label.as  FJ_MenuButton.as  HelpAndOptionsMenu.as  MainMenu.as  Panorama.as  Panorama_Night.as
scripts/_mainmenu_as/scripts/fourj/Base/: FJ_Button.as
scripts/_mainmenu_as/scripts/fourj/Buttons/: FJ_MenuButton_Normal.as
